[514] Make form inputs/links/buttons more consistent

--- a/app/views/support/providers/edit.html.erb
+++ b/app/views/support/providers/edit.html.erb
@@ -4,20 +4,22 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with model: [:support, @provider], local: true do |f| %>
 
-    <%= f.govuk_error_summary %>
+      <%= f.govuk_error_summary %>
 
-    <%= f.govuk_text_field :provider_name, label: { text: "Provider name", size: "m" }, width: 20 %>
+      <%= f.govuk_text_field :provider_name, label: { text: "Provider name", size: "m" } %>
 
       <%= f.govuk_radio_buttons_fieldset :provider_type, legend: { text: "Provider type", size: "m" } do %>
-        <%= f.govuk_radio_button :provider_type, :scitt, label: { text: "SCITT", size: "s" }, hint: { text: "Marks as an accredited provider" }, width: 20 %>
-        <%= f.govuk_radio_button :provider_type, :lead_school, label: { text: "Lead school", size: "s" }, hint: { text: "Marks as not an accredited provider" }, width: 20 %>
+        <%= f.govuk_radio_button :provider_type, :scitt, label: { text: "SCITT", size: "s" }, hint: { text: "Marks as an accredited provider" } %>
+        <%= f.govuk_radio_button :provider_type, :lead_school, label: { text: "Lead school", size: "s" }, hint: { text: "Marks as not an accredited provider" } %>
         <%= f.govuk_radio_divider %>
-        <%= f.govuk_radio_button :provider_type, :university, label: { text: "University", size: "s" }, hint: { text: "Marks as an accredited provider" }, width: 20 %>
+        <%= f.govuk_radio_button :provider_type, :university, label: { text: "University", size: "s" }, hint: { text: "Marks as an accredited provider" } %>
       <% end %>
 
-    <%= f.govuk_submit %>
+      <%= f.govuk_submit t("support.update_record") %>
     <% end %>
 
-    <%= govuk_link_to(t("cancel"), support_provider_path) %>
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), support_provider_path) %>
+    </p> 
   </div>
 </div>
