--- a/app/views/support/allocation_uplifts/new.html.erb
+++ b/app/views/support/allocation_uplifts/new.html.erb
@@ -15,10 +15,12 @@
         
       <%= f.govuk_error_summary %>
 
-      <%= f.govuk_text_field :uplifts, label: { text: "Allocation Uplift", size: "s" }, width: 20 %>
-      <%= f.govuk_submit %>
+      <%= f.govuk_text_field :uplifts, label: { text: "Allocation Uplift", size: "s" } %>
+      <%= f.govuk_submit t("support.update_record") %>
     <% end %>
 
-    <%= govuk_link_to(t("cancel"), support_allocation_path(@allocation)) %>
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), support_allocation_path(@allocation)) %>
+    </p> 
   </div>
 </div>
