--- a/app/views/support/courses/edit.html.erb
+++ b/app/views/support/courses/edit.html.erb
@@ -7,16 +7,17 @@
 
       <%= f.govuk_error_summary %>
 
-      <%= f.govuk_text_field(:course_code,
-      label: { text: "Course code", size: "m" }, width: 10) %>
-      <%= f.govuk_text_field(:name,
-      label: { text: "Course title", size: "m" }, width: 10) %>
-      <%= f.govuk_date_field(:start_date,
-      legend: { text: "Start date" }, width: 10) %>
+      <%= f.govuk_text_field(:course_code, label: { text: "Course code", size: "m" }) %>
 
-      <%= f.govuk_submit %>
+      <%= f.govuk_text_field(:name, label: { text: "Course title", size: "m" }) %>
+
+      <%= f.govuk_date_field(:start_date, legend: { text: "Start date" }) %>
+
+      <%= f.govuk_submit t("support.update_record") %>
     <% end %>
 
-    <%= govuk_link_to(t("cancel"), support_provider_courses_path) %>
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), support_provider_courses_path) %>
+    </p> 
   </div>
 </div>
