[503] Allow locations to be deleted

--- a/app/views/support/locations/edit.html.erb
+++ b/app/views/support/locations/edit.html.erb
@@ -31,6 +31,14 @@
 
     <p class="govuk-body">
       <%= govuk_link_to(t("cancel"), support_provider_locations_path) %>
-    </p> 
+    </p>
+
+    <p class="govuk-body">
+      <%= govuk_button_to t("support.actions.delete", resource: "location"),
+          support_provider_location_path(@provider, @site),
+          method: :delete,
+          class: "govuk-button govuk-button--warning" %>
+    </p>
+    
   </div>
 </div>
