[441] Add feature specs for filters

--- a/app/components/filters/view.html.erb
+++ b/app/components/filters/view.html.erb
@@ -17,7 +17,7 @@
               </div>
               <div class="moj-filter__heading-action">
                 <p class="govuk-body">
-                <%= govuk_link_to 'Clear<span class="govuk-visually-hidden"> all filters</span>'.html_safe, support_providers_path, class: "govuk-link--no-visited-state" %>
+                <%= govuk_link_to 'Clear<span class="govuk-visually-hidden"> all filters</span>'.html_safe, reload_path, class: "govuk-link--no-visited-state" %>
                 </p>
               </div>
             </div>
