--- a/app/views/support/locations/_form.html.erb
+++ b/app/views/support/locations/_form.html.erb
@@ -8,10 +8,16 @@
     label: { text: "Unique Reference Number (URN)", size: "m" }, 
     hint: 
       { 
-        text: safe_join(["Find URNs on", " ", tag.a(t("links.get_information_schools"), 
-        href: t("links.get_information_schools"), 
-        target: "_blank",
-        class: "govuk-link")]) 
+        text: safe_join(
+          [
+            "Find URNs on ", tag.a(
+              t("links.get_information_schools"), 
+              href: t("links.get_information_schools"), 
+              target: "_blank",
+              class: "govuk-link"
+            )
+          ]
+        ) 
       },
     width: 10
   ) %>
