--- a/app/views/support/providers/users.html.erb
+++ b/app/views/support/providers/users.html.erb
@@ -1,2 +1,2 @@
-<%= render "support/users/users", users: @users %>
+<%= render "support/providers/provider_user_list", users: @users, provider: @provider %>
 <%= render Paginator::View.new(scope: @users ) %>
