--- a/app/views/support/users/_user_providers.html.erb
+++ b/app/views/support/users/_user_providers.html.erb
@@ -3,6 +3,7 @@
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider name</th>
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Provider code</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Action</th>
     </tr>
   </thead>
 
@@ -18,6 +19,16 @@
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
             <%= provider.provider_code %>
+          </span>
+        </td>
+
+        <td class="govuk-table__cell">
+          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+            <%= govuk_button_to("Remove provider",
+              support_user_permission_path(@user.user_permissions.find_by(provider_id: provider.id)),
+              id: "remove-provider",
+              method: :delete,
+              class: "govuk-button govuk-button--warning govuk-!-margin-bottom-0") %>
           </span>
         </td>
       </tr>
