--- a/app/components/navigation_bar/view.html.erb
+++ b/app/components/navigation_bar/view.html.erb
@@ -1,5 +1,5 @@
  <% if user_signed_in? %>
-  <div class="moj-primary-navigation">
+  <div class="moj-primary-navigation govuk-!-margin-top-4">
     <div class="moj-primary-navigation__container">
       <div class="moj-primary-navigation__nav">
         <nav class="moj-primary-navigation" aria-label="Primary navigation">
