--- a/app/components/header/view.html.erb
+++ b/app/components/header/view.html.erb
@@ -1,5 +1,5 @@
 <%= govuk_header(
-  homepage_url: "/",
+  homepage_url: old_publish_homepage_path,
   classes: "govuk-!-display-none-print app-header app-header--wide-logo #{environment_header_class}",
   navigation_classes: "govuk-header__navigation--end") do |header| %>
   <% header.product_name(name: "Publish teacher training courses") %>
