--- a/app/views/publish_interface/providers/index.html.erb
+++ b/app/views/publish_interface/providers/index.html.erb
@@ -1,1 +1,9 @@
 <%= render PageTitle::View.new(title: "Organisations") %>
+
+<h1 class="govuk-heading-l">Organisations</h1>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <%= govuk_link_to 'Click here to view', "#{Settings.publish_url}/organisations"  %>
+  </div>
+</div>
