--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     <% else %>
       <%= render Header::View.new(
         service_name: I18n.t("service_name"),
-        items: header_items(@current_user),
+        current_user: current_user
       ) %>
     <% end %>
 
