[500] Edit course form date to be dynamic

--- a/app/views/support/courses/edit.html.erb
+++ b/app/views/support/courses/edit.html.erb
@@ -13,6 +13,8 @@
 
       <%= f.govuk_date_field(:start_date, legend: { text: "Start date" }) %>
 
+      <%= f.govuk_date_field(:applications_open_from, legend: { text: "Applications open from date" }) %>
+
       <%= f.govuk_submit t("support.update_record") %>
     <% end %>
 
