[403] Address PR comments

--- a/app/views/support/providers/_provider_user_list.html.erb
+++ b/app/views/support/providers/_provider_user_list.html.erb
@@ -21,7 +21,7 @@
 
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= govuk_link_to user.email, support_user_path(user) %>
+            <%= govuk_link_to(user.email, support_user_path(user)) %>
           </span>
         </td>
 
