--- a/app/views/support/users/_user_providers.html.erb
+++ b/app/views/support/users/_user_providers.html.erb
@@ -12,7 +12,7 @@
       <tr class="govuk-table__row qa-provider_row">
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= govuk_link_to provider.provider_name, support_provider_path(provider) %>
+            <%= govuk_link_to(provider.provider_name, support_provider_path(provider)) %>
           </span>
         </td>
 
