--- a/app/views/support/users/_users.html.erb
+++ b/app/views/support/users/_users.html.erb
@@ -1,8 +1,8 @@
-<table class="govuk-table">
+<table class="govuk-table fixed-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Email</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Email</th>
       <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Provider count</th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
             <%= user.full_name %>
           </span>
         </td>
-        <td class="govuk-table__cell">
+        <td class="govuk-table__cell break-email">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
             <%= user.email %>
           </span>
