--- a/app/views/sign_in/index.html.erb
+++ b/app/views/sign_in/index.html.erb
@@ -3,16 +3,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
-    <h1 class="govuk-heading-l">Sign in to <%= I18n.t("service_name") %></h1>
-
-    <% if AuthenticationService.dfe_signin? %>
-        <p class="govuk-body-m">Use DfE Sign-in to access your account.</p>
-        <%= govuk_button_to("Sign in using DfE Sign-in", "/auth/dfe", class: "qa-sign_in_button") %>
-        <p class="govuk-body-m">If you do not have a DfE Sign-in account but need access to <%= I18n.t("service_name") %>, email <%= support_email %>.
-        </p>
+    <% if from_old_publish? %>
+      <%= render partial: "migration_signin_content" %>
     <% else %>
-        <p class="govuk-body-m">Use Personas to access an account.</p>
-        <%= govuk_link_to "Sign in using a Persona", "/personas", button: true %>
+      <%= render partial: "default_signin_content" %>
     <% end %>
   </div>
 </div>
