--- a/app/views/publish_interface/providers/visas/edit.html.erb
+++ b/app/views/publish_interface/providers/visas/edit.html.erb
@@ -2,7 +2,12 @@
 <% content_for :page_title, title_with_error_prefix(page_title, @provider_visa_form.errors.present?) %>
 
 <% content_for :before_content do %>
-  <%= govuk_back_link_to(details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+  <%= govuk_back_link_to(
+      old_publish_link_for(
+        details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)
+      )
+    )
+  %>
 <% end %>
 
 <div class="govuk-grid-row">
