Adjust back links in Publish 'About Your Organisation' section
- Make back links in each subsection go back to the About Your Org root
  page
- Make the back link on the root page go to Old Publish, where the
  Provider root page currently sits

--- a/app/views/publish_interface/providers/about.html.erb
+++ b/app/views/publish_interface/providers/about.html.erb
@@ -2,12 +2,7 @@
 <% content_for :page_title, title_with_error_prefix(page_title, @errors.present?) %>
 
 <% content_for :before_content do %>
-  <%= govuk_back_link_to(
-      old_publish_link_for(
-        details_publish_provider_recruitment_cycle_path(@about_form.provider_code, @about_form.recruitment_cycle_year)
-      )
-    ) 
-  %>
+  <%= govuk_back_link_to(details_publish_provider_recruitment_cycle_path(@about_form.provider_code, @about_form.recruitment_cycle_year)) %>
 <% end %>
 
 <div class="govuk-grid-row">
