--- a/app/views/support/users/_users.html.erb
+++ b/app/views/support/users/_users.html.erb
@@ -12,7 +12,7 @@
       <tr class="govuk-table__row user-row">
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= user.full_name %>
+            <%= govuk_link_to user.full_name, support_user_path(user) %>
           </span>
         </td>
         <td class="govuk-table__cell break-email">
