[510] Change provider user list to match user list

--- a/app/views/support/providers/_provider_user_list.html.erb
+++ b/app/views/support/providers/_provider_user_list.html.erb
@@ -1,8 +1,7 @@
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">First name</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Last name</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Name</th>
       <th scope="col" class="govuk-table__header govuk-!-width-two-quarters">Email</th>
       <th scope="col" class="govuk-table__header govuk-!-width-two-quarters">Action</th>
     </tr>
@@ -12,16 +11,14 @@
     <% @users.each do |user| %>
       <tr class="govuk-table__row user-row">
         <td class="govuk-table__cell">
-            <span class="govuk-!-display-block govuk-!-margin-bottom-1"><%= user.first_name %></span>
-        </td>
-
-        <td class="govuk-table__cell">
-          <span class="govuk-!-display-block govuk-!-margin-bottom-1"><%= user.last_name %></span>
+          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+              <%= govuk_link_to user.full_name, support_user_path(user) %>
+          </span>
         </td>
 
         <td class="govuk-table__cell">
           <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-            <%= govuk_link_to(user.email, support_user_path(user)) %>
+            <%= user.email %>
           </span>
         </td>
 
