--- a/app/views/support/users/show.html.erb
+++ b/app/views/support/users/show.html.erb
@@ -1,25 +1,25 @@
 <%= render GovukComponent::SummaryListComponent.new do |component|
   component.row do |row|
     row.key { "First name" }
-    row.value { @user.first_name }
+    row.value( text: @user.first_name, html_attributes: { id: "first_name" } )
     row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: 'first name')
   end
 
   component.row do |row|
     row.key { "Last name" }
-    row.value { @user.last_name }
+    row.value( text: @user.last_name, html_attributes: { id: "last_name" } )
     row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: 'last name')
   end
 
   component.row do |row|
     row.key { "Email" }
-    row.value { @user.email }
+    row.value( text: @user.email, html_attributes: { id: "email" } )
     row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: 'email')
   end
 
   component.row do |row|
     row.key { "Admin?" }
-    row.value { @user.admin?.to_s.capitalize }
+    row.value( text: @user.admin?.to_s.capitalize, html_attributes: { id: "admin_status" } )
     row.action(text: "Change", href: edit_support_user_path(@user), visually_hidden_text: 'admin')
   end
 
