[510] Move summary-list specific css

--- a/app/webpacker/styles/_summary-list.scss
+++ b/app/webpacker/styles/_summary-list.scss
@@ -4,3 +4,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.govuk-table {
+  &--fixed {
+    @extend .govuk-table;
+    table-layout: fixed;
+  }
+
+  .break {
+    word-break: break-all;
+  }
+}
