--- a/app/views/support/users/_users.html.erb
+++ b/app/views/support/users/_users.html.erb
@@ -1,4 +1,4 @@
-<table class="govuk-table fixed-table">
+<table class="govuk-table--fixed">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
@@ -15,8 +15,8 @@
             <%= govuk_link_to user.full_name, support_user_path(user) %>
           </span>
         </td>
-        <td class="govuk-table__cell break-email">
-          <span class="govuk-!-display-block govuk-!-margin-bottom-1">
+        <td class="govuk-table__cell">
+          <span class="govuk-!-display-block govuk-!-margin-bottom-1 break">
             <%= user.email %>
           </span>
         </td>
