[0562] Added performance dashboard

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,6 +25,9 @@
                 <li class="govuk-footer__inline-list-item">
                   <%= link_to "Terms and conditions", terms_path, class: "govuk-footer__link" %>
                 </li>
+                <li class="govuk-footer__inline-list-item">
+                  <%= link_to "Service performance", performance_dashboard_path, class: "govuk-footer__link" %>
+                </li>
               </ul>
             </div>
           </div>
