--- a/app/views/publish_interface/providers/users/index.html.erb
+++ b/app/views/publish_interface/providers/users/index.html.erb
@@ -1,5 +1,8 @@
-<% content_for :page_title, "Users" %>
-<%= content_for :before_content, render_breadcrumbs(:users) %>
+<% page_title = "Users" %>
+
+<% content_for :before_content do %>
+  <%= govuk_back_link_to(details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+<% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -7,11 +10,11 @@
     <p class="govuk-body">
       These users currently have access to this organisation. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.
     </p>
-    <%= govuk_button_link_to "Request access for someone else", request_access_provider_path(code: @provider.provider_code) %>
+    <%= govuk_button_link_to "Request access for someone else", "request_access_provider_path(code: @provider.provider_code)" %>
     <% @users.each do |user| %>
       <div>
         <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
-          <%= user.first_name user.last_name %>
+          <%= "#{user.first_name} #{user.last_name}" %>
         </h2>
         <p class="govuk-body govuk-!-margin-bottom-0"><%= user.email %></p>
       </div>
