[578] Clean up controller and include request access route helper

--- a/app/views/publish_interface/providers/users/index.html.erb
+++ b/app/views/publish_interface/providers/users/index.html.erb
@@ -10,7 +10,7 @@
     <p class="govuk-body">
       These users currently have access to this organisation. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.
     </p>
-    <%= govuk_button_link_to "Request access for someone else", "request_access_provider_path(code: @provider.provider_code)" %>
+    <%= govuk_button_link_to "Request access for someone else", request_access_publish_provider_recruitment_cycle_path(code: @provider.provider_code) %>
     <% @users.each do |user| %>
       <div>
         <h2 class="govuk-heading-m govuk-!-margin-bottom-1">
