--- a/app/views/publish_interface/users/index.html.erb
+++ b/app/views/publish_interface/users/index.html.erb
@@ -1,7 +1,11 @@
 <% page_title = "Users" %>
 
 <% content_for :before_content do %>
-  <%= govuk_back_link_to("#{Settings.publish_url}/organisations/#{@provider.provider_code}") %>
+  <%= govuk_back_link_to(
+      old_publish_link_for(
+        publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)
+      )
+    ) %>
 <% end %>
 
 <div class="govuk-grid-row">
