--- a/app/views/publish_interface/courses/level/new.html.erb
+++ b/app/views/publish_interface/courses/level/new.html.erb
@@ -12,18 +12,17 @@ errors placeholder
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with model: @course_levels_form,
-                  url: visas_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year),
+                  url: publish_provider_recruitment_cycle_courses_level_path,
                   builder: GOVUKDesignSystemFormBuilder::FormBuilder,
-                  method: :put,
-                  local: true,
-                  method: :get do |form| %>
+                  method: :post,
+                  local: true do |form| %>
 
       
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">Level</h2>
             </legend>
-            <div class="govuk-radios govuk-radios" data-module="govuk-radios">
+            <div class="govuk-radios govuk-radios govuk-!-margin-bottom-5" data-module="govuk-radios">
               <% %i[primary secondary further_education].each do |level| %>
                 <div class="govuk-radios__item">
                   <%= form.radio_button(
@@ -41,7 +40,6 @@ errors placeholder
                 </div>
               <% end %>
             </div>
-
           </fieldset>
 
         <h2 class="govuk-heading-m">
@@ -56,6 +54,12 @@ errors placeholder
             </div>
           </div>
         </div>
+
+        <p class="govuk-body">
+          <%= form.submit "Continue",
+                        class: "govuk-button govuk-!-margin-top-3",
+                        data: { qa: "course__save" } %>
+        </p>
     <% end %>
   </div>
 </div>
