[563] Custom validation messages for levels form

--- a/app/views/publish_interface/courses/level/new.html.erb
+++ b/app/views/publish_interface/courses/level/new.html.erb
@@ -1,7 +1,11 @@
 <% content_for :page_title, title_with_error_prefix("What type of course?", @errors && @errors.any?) %>
 
 <% content_for :before_content do %>
-  <%= "backlink placeholder" %>
+  <%= govuk_back_link_to(
+      old_publish_link_for(
+        publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)
+      )
+    ) %>
 <% end %>
 
 <h1 class="govuk-heading-l">
