--- a/app/views/publish_interface/courses/level/new.html.erb
+++ b/app/views/publish_interface/courses/level/new.html.erb
@@ -13,7 +13,7 @@
 </h1>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with model: @course_levels_form,
+    <%= form_with model: @course_level_form,
                   url: publish_provider_recruitment_cycle_courses_level_path,
                   method: :post,
                   local: true do |f| %>
