--- a/app/views/publish_interface/providers/locations/edit.html.erb
+++ b/app/views/publish_interface/providers/locations/edit.html.erb
@@ -10,8 +10,7 @@
     <%= form_with(
       model: @location_form,
       url: publish_provider_recruitment_cycle_location_path(@location_form.provider_code, @location_form.recruitment_cycle_year, @location_form.site.id),
-      method: :patch,
-      builder: GOVUKDesignSystemFormBuilder::FormBuilder,
+      method: :patch
     ) do |f| %>
 
       <%= f.govuk_error_summary %>
