--- a/app/views/publish_interface/courses/confirmation/confirmation.html.erb
+++ b/app/views/publish_interface/courses/confirmation/confirmation.html.erb
@@ -117,7 +117,7 @@
                 You can’t change this because you only have 1 location.
               </p>
               <p class="govuk-body">
-                <%= govuk_link_to "Manage your locations", provider_locations_path, target: "_blank", rel: "noopener noreferrer" %>
+                <%= govuk_link_to "Manage your locations", publish_provider_locations_path, target: "_blank", rel: "noopener noreferrer" %>
               </p>
             <% end %>
           <% end %>
