--- a/app/views/publish_interface/providers/courses/_description_content.html.erb
+++ b/app/views/publish_interface/providers/courses/_description_content.html.erb
@@ -9,7 +9,7 @@
     summary_list,
     :course,
     "About this course",
-    course.enrichment_attribute(:about_course),
+    course.about_course,
     %w[about_course],
     action_path: nil, #about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
     action_visually_hidden_text: "details about this course",
@@ -19,7 +19,7 @@
     summary_list,
     :course,
     "Interview process (optional)",
-    course.enrichment_attribute(:interview_process),
+    course.interview_process,
     %w[interview_process],
     action_path: nil, #"#{about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#interview-process",
     action_visually_hidden_text: "details about the interview process",
@@ -29,7 +29,7 @@
     summary_list,
     :course,
     course.placements_heading,
-    course.enrichment_attribute(:how_school_placements_work),
+    course.how_school_placements_work,
     %w[how_school_placements_work],
     action_path: nil, #"#{about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#how-school-placements-work",
     action_visually_hidden_text: "details about how school placements work",
@@ -59,7 +59,7 @@
       summary_list,
       :course,
       "Fee for UK students",
-      number_to_currency(course.enrichment_attribute(:fee_uk_eu)),
+      number_to_currency(course.fee_uk_eu),
       %w[fee_uk_eu],
       action_path: nil, #"#{fees_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-uk",
       action_visually_hidden_text: "fee for UK students",
@@ -69,8 +69,8 @@
       summary_list,
       :course,
       "Fee for international students (optional)",
-      number_to_currency(course.enrichment_attribute(:fee_international)),
-      %w[international_fees],
+      number_to_currency(course.fee_international),
+      %w[fee_international],
       action_path: nil, #"#{fees_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-international",
       action_visually_hidden_text: "fee for international students",
     ) %>
@@ -79,7 +79,7 @@
       summary_list,
       :course,
       "Fee details (optional)",
-      course.enrichment_attribute(:fee_details),
+      course.fee_details,
       %w[fee_details],
       action_path: nil, #"#{fees_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-details",
       action_visually_hidden_text: "fee details",
@@ -89,7 +89,7 @@
       summary_list,
       :course,
       "Financial support you offer (optional)",
-      course.enrichment_attribute(:financial_support),
+      course.financial_support,
       %w[financial_support],
       action_path: nil, #"#{fees_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#financial-support",
       action_visually_hidden_text: "details of financial support you offer",
@@ -109,7 +109,7 @@
       summary_list,
       :course,
       "Salary",
-      course.enrichment_attribute(:salary_details),
+      course.salary_details,
       %w[salary_details],
       action_path: nil, #"#{salary_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#salary",
       action_visually_hidden_text: "salary",
@@ -147,7 +147,7 @@
     summary_list,
     :course,
     "Personal qualities (optional)",
-    course.enrichment_attribute(:personal_qualities),
+    course.personal_qualities,
     %w[personal_qualities],
     action_path: nil, #"#{requirements_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#personal-qualities",
     action_visually_hidden_text: "personal qualities",
@@ -157,7 +157,7 @@
     summary_list,
     :course,
     "Other requirements (optional)",
-    course.enrichment_attribute(:other_requirements),
+    course.other_requirements,
     %w[other_requirements],
     action_path: nil, #"#{requirements_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#other-requirements",
     action_visually_hidden_text: "other requirements",
